Update git ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+#======================================
+# Web
+#======================================
+
+# Installed node modules
+node_modules/
+
+
+#======================================
+# Android
+#======================================
+
 # Built application files
 *.apk
 *.ap_
