--- a/web/package.json
+++ b/web/package.json
@@ -17,11 +17,13 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   },
   "scripts": {
     "build": "webpack --mode development",
     "build-prod": "webpack --mode production",
+    "dev": "webpack-dev-server --hot --inline --mode development",
     "start": "http-server"
   },
   "keywords": [],
