--- a/web/package.json
+++ b/web/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "firebase": "^5.3.1",
+    "lodash": "^4.17.10",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
